2005-10-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/ejabberd_odbc.erl: Experimental support for pgsql
	library

	* src/ejabberd_auth_odbc.erl: Bugfix

	* src/mod_roster_odbc.erl: Bugfix

2005-10-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Added vCard converter

	* src/mod_vcard_odbc.erl: vCard support via ODBC

	* src/odbc/pg.sql: Updated

2005-09-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated API for better
	integration with J-EAI web interface

	* src/mod_shared_roster.erl: Now possible to specify all users on
	virtual host in group
	* src/web/ejabberd_web_admin.erl: Likewise

2005-09-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.erl: Bugfix

2005-09-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Updated

2005-09-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_disco.erl: Disco publishing support (thanks to Magnus
	Henoch)

	* src/mod_disco.erl: Functions register_sm_feature and
	register_sm_node replaced with hooks (thanks to Sergei Golovan)
	* src/mod_vcard.erl: Updated
	* src/mod_vcard_ldap.erl: Likewise

	* src/mod_disco.erl: Now mod_disco doesn't depend on mod_configure
	(thanks to Sergei Golovan)
	* src/mod_configure.erl: Likewise

2005-08-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Converter from mnesia to ODBC

	* src/mod_offline_odbc.erl: Minor fix

2005-08-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard_ldap.erl: Bugfix

	* src/mod_vcard.erl: Bugfix

2005-08-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth_odbc.erl: Bugfix

2005-08-21  Alexey Shchepin  <alexey@sevcom.net>

	* doc/dev.tex: Updated

2005-08-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl_digest.erl: Fixed challenge/response parsing (thanks
	to Martin Pokorny)

2005-08-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pl.msg: Updated (thanks to Andrew Smyk)

	* src/web/ejabberd_web_admin.erl: Bugfix (thanks to Badlop)
